<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBG"
    tools:context=".MainActivity">


    <!--    I have to make another Constraint Layout for content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHome"
        android:layout_width="match_parent"
        android:layout_height="599dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/MainBG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:importantForAutofill="no"
            android:text=""
            android:textColor="#66FFFFFF"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:gravity="end|center_vertical"
            android:text="@string/numbers"
            android:textAppearance="@style/numbers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInput" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOutput"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#FF5959"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvBack"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#FAFF00"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="21sp"
                    tools:ignore="ButtonStyle,UseCompatTextViewDrawableXml"
                    android:drawableTop="@drawable/ic_back_space"
                    android:drawableTint="@color/black"
                    android:paddingTop="25dp"/>

                <TextView
                    android:id="@+id/tvPercent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#4E505F"
                    android:gravity="center"
                    android:text="@string/amapercent"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#4B5EFC"
                    android:gravity="center"
                    android:text="@string/divide"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvSeven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/seven"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvEight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/eight"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvNine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/nine"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvMultiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#4B5EFC"
                    android:gravity="center"
                    android:text="@string/multiply"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvFour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/four"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvFive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/five"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvSix"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/six"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvMinus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#4B5EFC"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/one"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/two"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"

                    android:text="@string/three"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvPlus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#4B5EFC"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tvDot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"
                    android:text="@string/dot"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvZero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvZeroZero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#2E2F38"
                    android:gravity="center"
                    android:text="@string/zeroZero"
                    android:textColor="#FFFFFF"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/tvEqual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#66FF7F"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="#343434"
                    android:textSize="55sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>